--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: ruby
 rvm: 2.6.0
 script:
+  - bundle exec rake db:create
   - bundle exec rake db:setup
   - bundle exec rspec
 services:
