--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exquisite_corpse_telephone",
+  "name": "erotic_corpse",
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.9.4",
