--- a/config/database.yml
+++ b/config/database.yml
@@ -18,14 +18,14 @@ default: &default
 
 development:
   <<: *default
-  database: exquisite_corpse_telephone_development
+  database: erotic_corpse_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: exquisite_corpse_telephone_test
+  database: erotic_corpse_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
