--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,23 @@
 language: ruby
 rvm: 2.6.0
-cache: bundler
+cache:
+  bundler: true
+  directories:
+    - node_modules # NPM packages
+  yarn: true
 before_install:
   - mysql -e 'CREATE DATABASE erotic_corpse_test;'
+install:
+  - travis_retry gem install bundler -v '<2'
+  - travis_retry nvm install 11.7.0
+  - node -v
+  - travis_retry npm i -g yarn
+  - travis_retry bundle install
+  - travis_retry yarn
+  - bundle
+  - yarn
 script:
   - bundle exec rake db:reset
   - bundle exec rspec
 services:
   - mysql
-addons:
-  mysql: "5.5"
