--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^1.0.1",
     "react-countdown": "^2.2.1",
     "react-dom": "^16.13.1",
+    "react-howler": "^3.7.4",
     "react_ujs": "^2.6.1",
     "turbolinks": "^5.2.0"
   },
