--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "erotic_corpse",
+  "engines": {
+    "node": "12.x"
+  },
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.9.4",
