--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
         image: mysql:5.7
         env:
           MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: erotic_corpse_test
         ports:
           - 3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
@@ -63,11 +64,13 @@ jobs:
         run: |
           yarn install --pure-lockfile
 
-      - name: Setup test database
-        env:
-          RAILS_ENV: test
-        run: |
-          bin/rails db:setup
+      # - run: |
+      #     sudo /etc/init.d/mysql start
+      # - name: Setup test database
+      #   env:
+      #     RAILS_ENV: test
+      #   run: |
+      #     bin/rails db:setup
 
-      - name: Run tests
-        run: bin/rspec
+      # - name: Run tests
+      #   run: bin/rspec
