--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,13 +64,13 @@ jobs:
         run: |
           yarn install --pure-lockfile
 
-      # - run: |
-      #     sudo /etc/init.d/mysql start
-      # - name: Setup test database
-      #   env:
-      #     RAILS_ENV: test
-      #   run: |
-      #     bin/rails db:setup
+      - run: |
+          sudo /etc/init.d/mysql start
+      - name: Setup test database
+        env:
+          RAILS_ENV: test
+        run: |
+          bin/rails db:setup
 
       # - name: Run tests
       #   run: bin/rspec
