--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,5 +75,5 @@ jobs:
         run: |
           bin/rails db:setup
 
-      # - name: Run tests
-      #   run: bin/rspec
+      - name: Run tests
+        run: bin/rspec
