--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
         env:
           RAILS_ENV: test
         run: |
-          bin/rails db:setup
+          bundle exec rspec
 
       - name: Run tests
         run: bin/rspec
