--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
         env:
           RAILS_ENV: test
         run: |
-          bundle exec rspec
+          bundle exec db:setup
 
       - name: Run tests
-        run: bin/rspec
+        run: bundle exec rspec
