--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,9 @@ jobs:
         env:
           RAILS_ENV: test
         run: |
-          bundle exec db:setup
+          bin/rails db:setup
 
       - name: Run tests
+        env:
+          RAILS_ENV: test
         run: bundle exec rspec
