--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-audio-player": "^0.14.0",
     "react-bootstrap": "^1.0.1",
     "react-countdown": "^2.2.1",
     "react-dom": "^16.13.1",
