--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,16 +63,18 @@ jobs:
         run: |
           yarn install --pure-lockfile
 
-      - name: Setup Runner Database
-        run: |
-          mysql -uroot -h127.0.0.1 -proot -e 'CREATE DATABASE IF NOT EXISTS erotic_corpse_test;'
-      - name: Setup test database
-        env:
-          RAILS_ENV: test
-        run: |
-          bin/rails db:setup
+      # - run: |
+      #     sudo /etc/init.d/mysql start
+      # - name: Setup Runner Database
+      #   run: |
+      #     mysql -uroot -h127.0.0.1 -proot -e 'CREATE DATABASE IF NOT EXISTS erotic_corpse_test;'
+      # - name: Setup test database
+      #   env:
+      #     RAILS_ENV: test
+      #   run: |
+      #     bin/rails db:setup
 
-      - name: Run tests
-        env:
-          RAILS_ENV: test
-        run: bundle exec rspec
+      # - name: Run tests
+      #   env:
+      #     RAILS_ENV: test
+      #   run: bundle exec rspec
