--- a/config/database.yml
+++ b/config/database.yml
@@ -26,7 +26,7 @@ development:
 test:
   <<: *default
   database: erotic_corpse_test
-  password: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
